增加user_controller中对user的查询删除更新操作，修改user查询api为get参数查询，支持id或username
