# app-server/docs/swagger.json
@@ -9,9 +9,9 @@
     "host": "localhost:8081",
     "basePath": "/api",
     "paths": {
-        "/v1/user/info/{id}": {
+        "/v1/user/info": {
             "get": {
-                "description": "通过用户ID获取用户信息",
+                "description": "通过用户ID获取用户信息，可选用户id或用户名查询，优先使用用户id",
                 "produces": [
                     "application/json"
                 ],
@@ -24,8 +24,13 @@
                         "type": "integer",
                         "description": "用户ID",
                         "name": "id",
-                        "in": "path",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -38,13 +43,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -52,9 +57,13 @@
         }
     },
     "definitions": {
-        "gin.H": {
+        "models.ErrorResponse": {
             "type": "object",
-            "additionalProperties": {}
+            "properties": {
+                "errorMessage": {
+                    "type": "string"
+                }
+            }
         },
         "models.User": {
             "type": "object",
