# app-server/models/http_response.go
@@ -1,0 +1,5 @@
+package models
+
+type ErrorResponse struct {
+	ErrorMessage string `json:"errorMessage"`
+}
